--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <div class="module-ct">
                         <div class="custom">
                             <p class="promo-banner">
-                                <a href="catalog/index.htm"><img src="assets/img/banner2.jpg" alt="banner1"><span>Каталог продукции </span></a>
+                                <a href="catalog/index.htm"><img src="assets/img/banner2.jpg" alt="banner1" style="border-radius: 20px;"><span>Каталог продукции </span></a>
                             </p>
                         </div>
                     </div>
@@ -270,7 +270,7 @@
                     <div class="module-ct">
                         <div class="custom">
                             <p>
-                                <a href="catalog/goryachie-predlozheniya/index.htm" class="promo-banner"><img src="assets/img/banner1.jpg" alt="banner1"><span>Горячие предложения</span> </a>
+                                <a href="catalog/goryachie-predlozheniya/index.htm" class="promo-banner"><img src="assets/img/banner1.jpg" alt="banner1" style="border-radius: 20px;"><span>Горячие предложения</span> </a>
                             </p>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                     <div class="module-ct">
                         <div class="custom">
                             <p>
-                                <a href="info/sistema-skidok.html" class="promo-banner"><img src="assets/img/banner3.jpg" alt="banner1"><span>Скидки до 15%</span> </a>
+                                <a href="info/sistema-skidok.html" class="promo-banner"><img src="assets/img/banner3.jpg" alt="banner1" style="border-radius: 20px;"><span>Скидки до 15%</span> </a>
                             </p>
                         </div>
                     </div>
