--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-xs-6 col-sm-6 col-md-3 logo">
                         <div class="logo-image">
                             <a href="index.htm" title="Студия Красок в Новосибирске">
-                            <img class="logo-img" src="assets/img/stcolorlogo.png" alt="Студия Красок в Новосибирске">
+                            <img src='https://svgshare.com/i/qDg.svg' title='artego logo'/>
                             <span>Студия Красок в Шымкенте</span>
                             </a>
                             <small class="site-slogan"></small>
@@ -145,65 +145,6 @@
                         </div>
                     </div>
                     <div class="col-4 col-sm-4 col-md-2 cart-block pull-right">
-                        <div class="cart ">
-                            <div class="vmCartModule msMiniCart" id="vmCartModule">
-	<a href="shop.html" rel="nofollow">
-		
-	<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewbox="0 0 475.084 475.085" style="enable-background:new 0 0 475.084 475.085;" xml:space="preserve">
-<g>
-	<g>
-		<path d="M365.446,401.998c0,10.092,3.579,18.702,10.711,25.834c7.132,7.139,15.749,10.711,25.845,10.711
-			c10.081,0,18.698-3.572,25.83-10.711c7.139-7.132,10.711-15.742,10.711-25.834s-3.568-18.702-10.711-25.841
-			c-7.132-7.132-15.749-10.704-25.83-10.704c-10.096,0-18.713,3.572-25.845,10.704C369.025,383.296,365.446,391.906,365.446,401.998
-			z"></path>
-		<path d="M469.658,78.51c-3.618-3.617-7.898-5.426-12.848-5.426H113.918c-0.193-1.331-0.621-3.756-1.287-7.277
-			c-0.666-3.523-1.188-6.329-1.569-8.425c-0.383-2.087-1.093-4.611-2.142-7.561c-1.047-2.952-2.284-5.286-3.711-6.995
-			c-1.425-1.718-3.328-3.189-5.708-4.43c-2.378-1.233-5.092-1.853-8.136-1.853H18.276c-4.952,0-9.234,1.812-12.85,5.424
-			C1.809,45.583,0,49.868,0,54.816s1.809,9.231,5.426,12.847c3.619,3.617,7.902,5.424,12.85,5.424h58.237l50.532,234.976
-			c-0.378,0.76-2.329,4.373-5.852,10.848c-3.521,6.475-6.328,12.135-8.42,16.988c-2.093,4.859-3.14,8.616-3.14,11.279
-			c0,4.948,1.809,9.232,5.424,12.854c3.621,3.606,7.902,5.421,12.851,5.421h18.272h255.815h18.261c4.948,0,9.232-1.814,12.847-5.421
-			c3.62-3.621,5.427-7.905,5.427-12.854c0-4.949-1.807-9.233-5.427-12.847c-3.614-3.614-7.898-5.428-12.847-5.428h-262.66
-			c4.57-9.138,6.854-15.222,6.854-18.268c0-1.909-0.238-4.004-0.715-6.283s-1.047-4.805-1.713-7.569
-			c-0.667-2.752-1.093-4.799-1.283-6.133l298.077-34.831c4.753-0.575,8.658-2.614,11.703-6.14c3.046-3.518,4.565-7.562,4.565-12.133
-			V91.363C475.082,86.415,473.278,82.132,469.658,78.51z"></path>
-		<path d="M109.632,401.998c0,10.092,3.567,18.702,10.706,25.834c7.141,7.139,15.75,10.711,25.841,10.711
-			c10.085,0,18.699-3.572,25.835-10.711c7.139-7.132,10.71-15.742,10.71-25.834s-3.568-18.702-10.71-25.841
-			c-7.137-7.132-15.75-10.704-25.835-10.704c-10.09,0-18.704,3.572-25.841,10.704C113.203,383.296,109.632,391.906,109.632,401.998z
-			"></path>
-	</g>
-</g>
-</svg>
-	<div class="cart_top">
-		<div class="total_products ms2_total_count">0</div>
-		<div class="total not_empty"><strong><span class="ms2_total_cost">0</span> руб.</strong></div>
-		<div class="total empty"><strong>Корзина</strong></div>
-	</div>
-	</a>
-		<div class="cart_content not_empty">
-
-	<div id="hiddencontainer" style=" display: none; ">
-		<div class="vmcontainer">
-			<div class="product_row">
-				<span class="quantity"></span>&nbsp;x&nbsp;<span class="product_name"></span>
-				<div class="subtotal_with_tax" style="float: right;"></div>
-			<div class="customProductData"></div>
-			</div>
-		</div>
-	</div>
-	
-	    
-	    <div id="mc-dynamic" class="vm_cart_products"></div>
-	
-
-
-	<div class="total">Всего <strong><span class="ms2_total_cost">0</span> руб.</strong></div>
-
-<div class="cart_info"></div>
-<div class="show_cart"><a style="float:right;" href="shop.html" rel="nofollow">Показать корзину</a></div>
-
-</div>
-</div>
-                        </div>
                     </div>
                     <div class="mobsearcher mobvi" onclick="openbox(&#39;searcherblock&#39;);">
                         <img src="assets/img/mobsearch.png">
@@ -1525,7 +1466,7 @@
                                     <div class="module-ct">
                                         <div class="custom">
                                             <p>«Студия Красок» специализируется на розничных продажах продукции финского концерна «Тиккурила», одного из ведущих мировых производителей лакокрасочных материалов.</p>
-                                            <p class="footer-logo"><img src="assets/img/stcolorlogo.png" alt=""></p>
+                                            <p class="footer-logo"><img src='https://danyaenot.gitlab.io/artego/assets/logo-9b82d00c.svg' title='artego logo'/></p>
                                         </div>
                                     </div>
                                 </div>
@@ -1534,7 +1475,7 @@
                         <div class=" col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="t3-module module">
                                 <div class="module-inner">
-                                    <h3 class="module-title "><span>Информация</span></h3>
+                                    <h3 class="module-title " style="margin-left: 7px;"><span>Информация</span></h3>
                                     <div class="module-ct">
                                         <ul>
                                             <li><a href="blog/index.htm">Новости</a></li>
@@ -1550,7 +1491,7 @@
                         <div class=" col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="t3-module module " id="Mod116">
                                 <div class="module-inner">
-                                    <h3 class="module-title "><span>Каталог</span></h3>
+                                    <h3 class="module-title " style="margin-left: 7px;"><span>Каталог</span></h3>
                                     <div class="module-ct">
                                         <div class="custom">
                                             <ul class=""><li class="first"><a href="catalog/vnutrennyaya-otdelka/index.htm">Внутренняя отделка</a></li><li><a href="catalog/vneshnyaya-otdelka/index.htm">Внешняя отделка</a></li><li><a href="catalog/laki-i-morilki/index.htm">Лаки и морилки</a></li><li><a href="catalog/banya/index.htm">Баня</a></li><li><a href="catalog/terrasy-i-sadovaya-mebel/index.htm">Террасы и садовая мебель</a></li><li><a href="catalog/metallicheskie-poverkhnosti/index.htm">Металлические поверхности</a></li><li><a href="catalog/podgotovka-poverxnosti/index.htm">Подготовка поверхности</a></li><li><a href="catalog/kraskoraspyiliteli-wagner/index.htm">Краскораспылители Wagner</a></li><li><a href="catalog/rastvoriteli/index.htm">Растворители</a></li><li><a href="catalog/goryachie-predlozheniya/index.htm">Горячие предложения</a></li><li><a href="catalog/termofenyi-wagner/index.htm">Термофены Wagner</a></li><li class="last"><a href="catalog/instrumentyi-dlya-pokraski/index.htm">Инструменты для покраски</a></li></ul>
@@ -1591,7 +1532,7 @@
                             <div class="col-sm-6 col-xs-12 footer-right">
                                 <div class="custom">
                                     <div class="payment-icons"><em class="fa fa-cc-visa"></em><em class="fa fa-cc-mastercard"></em></div>
-                                    <div class="social-icons"><a href="https://vk.com/stnovo" target="_blank"><em class="fa fa-vk"></em></a></div>
+                                    <div class="social-icons"><a href="https://vk.com/artegopaints" target="_blank"><em class="fa fa-vk"></em></a></div>
                                 </div>
                                 <!-- Start of Flyout Tabs -->
                                 <div class="header"></div>
